fix footer spacing on desktop

--- a/style.css
+++ b/style.css
@@ -271,7 +271,7 @@ body {
             padding-bottom: 32px;
             display: flex;
             flex-direction: row;
-            justify-content: space-between;
+            justify-content: space-evenly;
             
       
             #links {
